
0.9.7c Nov 13, 2003
 * updated Polish translation
 * added PKG_VER regex definition
 * updated cmp_pkg_versions to ignore arch and compare build if version parts are equal
 * Makefile updates

0.9.7b Nov 10, 2003
 * removed --interactive option
 * download all pkgs before processing installs,upgrades, and removals in transaction
 * updated NLS template and en.po
 * updated MD5SUM regex
 * give transaction report prompt for every dist-upgrade (even if no removes or upgrades,
   must have installs, however)
 * updated regex for pkg names, versions, md5, etc
 * when looking up md5 checksum, use the pkg location as well as name and version 
   (in case of duplicate versions)
 * updated regex, yet again, for pkg names, versions, md5, etc
 * updated makefile to gen library files
 * added Polish translation by nixon & s1m0n
 * moved gettext mo files into standard slackware locale directory (/usr/share/locale)

0.9.7a Nov 05, 2003
 * added check for presence of pkg in trans before adding upgrade (during --install)
 * added check for presence of pkg in trans before adding remove (during --remove)
 * added example linuxpackages.net source lines for each slack version
 * added head_request function to return if the named file is the same as the remote file
 * updated is_excluded, to continue loop if regex compile fails
 * return dep failure if one of the deps is excluded
 * added is_excluded check before adding explicit package to upgrade (allowing name and
   version to be checked, instead of just the name during the initial upgrade check)
   This is useful for excluding versions that contain pre or beta with a regex in the
   exclude such as: [0-9\_\.\-]{1}pre[0-9\-\.\-]{1} or [0-9\_\.\-]{1}beta[0-9\-\.\-]{1}
 * changed default ftp user:pass to show slapt-get-user@software.jaos.org
 * added missing commands to uninstall make target

0.9.7 Nov 03, 2003
 * parse package require/dep from PACKAGES.TXT
 * show parsed require/dep data with --show