@@ -4,6 +4,7 @@
  * added PKG_VER regex definition
  * updated cmp_pkg_versions to ignore arch and compare build if version parts are equal
  * Makefile updates
+ * more Makefile updates, symlinking libslapt-$(VERSION).so to libslapt.so
 
 0.9.7b Nov 10, 2003
  * removed --interactive option
